# AIDataFactory

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  health_check.py  logging_config.py  main.py  worker.py
backend/src/api/: schemas.py
backend/src/api/routes/: custom_templates.py  exports.py  health.py  jobs.py  projects.py  settings.py  stats.py  stream.py  templates_api.py
backend/src/clients/: hf_client.py  llm_client.py  redis_client.py  scraper_client.py
backend/src/db/: database.py  models.py
backend/src/pipeline/: base.py  orchestrator.py  rate_limiter.py
backend/src/pipeline/quality_checks/: __init__.py  coherence.py  duplicate_check.py  format_check.py  length_balance.py  readability.py  (+1 more)
backend/src/templates/: __init__.py  base.py  classification.py  instruction_following.py  qa_generation.py  summarization.py
backend/tests/: conftest.py  test_config.py  test_db.py  test_health.py  test_logging.py  test_redis_client.py  test_schemas.py  test_templates.py
backend/tests/fixtures/: sample_article.html
backend/tests/test_api/: test_compare_settings.py  test_custom_templates.py  test_jobs.py  test_projects.py  test_stats.py  test_stream.py
backend/tests/test_clients/: test_hf_client.py  test_llm_client.py  test_scraper.py
backend/tests/test_pipeline/: test_base.py  test_export.py  test_generation.py  test_ingestion.py  test_orchestrator.py  test_processing.py  test_quality.py  test_quality_checks.py  test_rate_limiter.py
(+33 files in other folders)
