[project]
name = "ai-data-factory"
version = "0.1.0"
description = "Production-grade AI training data pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
pipeline = [
    "playwright>=1.49.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.8.0",
    "langchain-text-splitters>=0.3.0",
    "litellm>=1.55.0",
    "jinja2>=3.1.0",
    "detoxify>=0.5.0",
    "textstat>=0.7.0",
    "datasketch>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
